updated book content

--- a/coursebook/08_digital_reporting.ipynb
+++ b/coursebook/08_digital_reporting.ipynb
@@ -54,6 +54,15 @@
     "\n",
     "If you start with another local branch work on it and want to push it to Github just use `git push origin branch_name` if *branch_name* is active in your local repository. After the other branch is available in the online repository, you can follow the merge hint, pull and merge to merge changes to the main branch in the online repository. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Streamlit\n",
+    "\n",
+    "Building web applications with streamlit."
+   ]
   }
  ],
  "metadata": {
