--- a/coursebook/07_torch.ipynb
+++ b/coursebook/07_torch.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Pytorch\n",
     "\n",
-    "While sciki-learn is a popular machine learning library, other popular libraries in this domain should not be ignored. While scikit-learn has its focus on traditional machine learning algorithms and is characterized by its uniform sytnax and purposes w.r.t. to preprocessing, model selection, model training and model evaluation, *pytorch* plays a more important role in the field of deep learning, especially for models which are build as neural network architectures. \n",
+    "Sciki-learn is a popular machine learning library, however, other popular libraries in this domain should not be ignored. While scikit-learn has its focus on traditional machine learning algorithms and is characterized by its uniform sytnax and purposes w.r.t. to preprocessing, model selection, model training and model evaluation, *pytorch* plays a more important role in the field of deep learning, especially for models which are build as neural network architectures. \n",
     "\n",
-    "Pytorch provides tools for building and training complex neural network models, particularly those that benefit from GPU acceleration. Thus, it is suitable for applications in, e.g., computer vision, natural language processing, and reinforcement learning. In comparison to scikit-learn, it can be conisdered as a low-level library that provides more control and flexibility over model building and training. At the same time, it requires more code to set up and train models compared to scikit-learn, but this allows for greater customization.\n",
+    "Pytorch provides tools for building and training complex neural network models, particularly those that benefit from GPU acceleration. Thus, it is suitable for applications in, e.g., computer vision, natural language processing, and reinforcement learning. In comparison to scikit-learn, it can be considered as a low-level library that provides more control and flexibility over model building and training. At the same time, it requires more code to set up and train models compared to scikit-learn, but this allows for greater customization.\n",
     "\n",
     "Its core blocks are:\n",
     "\n",
@@ -18,9 +18,9 @@
     "* Optim: Optimization algorithms (e.g., SGD, Adam) for training models.\n",
     "* Dynamic Computational Graphs: Graphs are built on-the-fly, allowing for flexible model design.\n",
     "\n",
-    "By the sub-modules of the NN module, neural networks can be manually defined in very custom ways. Such complex models are usually trained by numerical optimization which is based on gradient information for which differentiation is a must. The functionality of automatic differentiation in combination with the availability of different optimization algorithms is one of the main reasons for the popularity of pytorch. Furthermore, pytorch is open-source and has a large and usually helpful community. \n",
+    "By the sub-modules of the NN module, neural networks can be manually defined in very custom ways. Such complex models are usually trained by numerical optimization which is based on gradient information that is in need of differentiation. The functionality of automatic differentiation in combination with the availability of different optimization algorithms is one of the main reasons for the popularity of pytorch. Furthermore, pytorch is open-source and has a large and usually helpful community. \n",
     "\n",
-    "At the same time, one should know that *tensorflow* is an equivalent option to pytorch. It offers more or less the same functionalities. Due to the more pythonic way models are defined with pytorch and its wide spread usage in the research area, we are going to stick to pytorch.  So let us learn about the key concepts of pytorch.\n",
+    "Note that *tensorflow* is an equivalent option to pytorch. It offers more or less the same functionalities. Due to the more pythonic way how models are defined with pytorch and its wide spread usage in the research area, we are going to stick to pytorch.  So let us learn about the key concepts of pytorch.\n",
     "\n",
     "## Tensors\n",
     "\n",
