--- a/coursebook/09_digital_reporting.ipynb
+++ b/coursebook/09_digital_reporting.ipynb
@@ -61,7 +61,217 @@
    "source": [
     "## Streamlit\n",
     "\n",
-    "Building web applications with streamlit."
+    "Streamlit is an open-source app framework designed specifically for creating and sharing data apps built in Python. It is particularly popular among data scientists and machine learning practitioners due to its simplicity and ease of use. Streamlit allows users to transform data scripts into interactive web applications without requiring any web development experience.\n",
+    "\n",
+    "### Key Concepts of Streamlit\n",
+    "\n",
+    "1.\tWidgets:\n",
+    "Streamlit provides a variety of widgets for user interaction, such as sliders, buttons, text inputs, and file uploaders. These widgets allow users to interact with the app and dynamically change its behavior.\n",
+    "\n",
+    "2.\tReactive Programming:\n",
+    "Streamlit automatically updates the app when an input widget’s state changes, re-running the script from top to bottom. This approach simplifies the creation of reactive applications.\n",
+    "\n",
+    "3.\tData Display:\n",
+    "Streamlit supports displaying various data formats, such as tables, charts, and images. It seamlessly integrates with popular libraries like Pandas and Matplotlib.\n",
+    "\n",
+    "4.\tLayout Management:\n",
+    "Streamlit allows you to structure the layout of your app using columns and expanders. This feature helps in organizing the app’s content more effectively.\n",
+    "\n",
+    "5.\tTheming and Customization:\n",
+    "Streamlit enables customization of the app’s appearance through theming options. Users can customize the sidebar, primary color, background color, and more.\n",
+    "\n",
+    "6.\tInteractivity with Plots:\n",
+    "Streamlit can display interactive plots from libraries like Matplotlib, Plotly, and Altair. These interactive visualizations enhance the user experience by allowing dynamic exploration of data.\n",
+    "\n",
+    "Streamlit simplifies the process of creating interactive and data-driven web applications in Python. With its intuitive API, reactive programming model, and rich support for data visualization, Streamlit is an excellent choice for data scientists and developers looking to share their work in an interactive format. By leveraging widgets, layout management, and customization options, users can build sophisticated apps quickly and efficiently.\n",
+    "\n",
+    "### Installation and basic usage\n",
+    "\n",
+    "To install streamlit via pip, simply use:\n",
+    "\n",
+    "```python\n",
+    "pip install streamlit\n",
+    "```\n",
+    "\n",
+    "Other ways to install streamlit can be found [here](https://docs.streamlit.io/get-started/installation). Instead of running streamlit via a notebook, one should run it in a script. A reasonable approach is to create a new folder, install a virtual environment in this folder, install streamlit and other necessary packages. \n",
+    "\n",
+    "The streamlit app is going to written in a .py script file. Once this is created, we can run the script from the command line by:\n",
+    "\n",
+    "```python\n",
+    "streamlit run my_first_streamlit_app.py\n",
+    "```\n",
+    "\n",
+    "Once you execute this, a local server will be created and the app is run in a new tab on your default browser. The content of the app is set by you and the help of different widgets. For instance, if the python script looks as \n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "\n",
+    "st.write(\"Hello world!\")\n",
+    "```\n",
+    "an app will open with the text written as above. Of course widgets can do much more than simply writing text. An overview of the API documentation can be found [here](https://docs.streamlit.io/develop/api-reference). Examples are the title, header, subheader or markdown widgets for structuring the app and include text content or data and chart widgets for showing data and graphics on the app. Input widgets allow for user interaction.\n",
+    "\n",
+    "If you run the app for the first time, you can select the always run option in the settings of the app. Consequently, whenever you change the app's script and save it, the app will be updated automatically. This allows you to update your app in a very interactive work process. \n",
+    "\n",
+    "### Basic widgets\n",
+    "\n",
+    "By default, streamlit uses \"magic commands\" if you do not actively use widgets. This means if your script looks something like this:\n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "welcome_string = \"Hello world! This is my first app.\"\n",
+    "welcome_string\n",
+    "\n",
+    "df = pd.DataFrame(data = np.random.rand(6).reshape(3, 2), index = [1, 2, 3], columns = [\"A\", \"B\"])\n",
+    "df\n",
+    "```\n",
+    "\n",
+    "it will show the string and the pandas data frame in the web app. Secondly, you can also use the st.write() widget which evaluates the type of the instance which is passed to it and renders it in the best possible way.\n",
+    "\n",
+    "However, often it is preferable to use type specific widgets for rendering them, as this gives the user more control regarding the way instances are rendered. For instance, if you use\n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "welcome_string = \"Hello world! This is my first app.\"\n",
+    "st.text(welcome_string, help = \"Be creative!\")\n",
+    "\n",
+    "df = pd.DataFrame(data = np.random.rand(6).reshape(3, 2), index = [1, 2, 3], columns = [\"A\", \"B\"])\n",
+    "st.dataframe(df, use_container_width=True)\n",
+    "```\n",
+    "\n",
+    "you can provide an additional helping comment to the text and display the data frame with a width which is automatically adjusted. \n",
+    "\n",
+    "### Layout widgets\n",
+    "\n",
+    "Layout widgets are important for structuring your app. For instance, we are going to include some interactive elements into the app later. To keep this input at, e.g., the left side of the app, we can use\n",
+    "\n",
+    "```python\n",
+    "with st.sidebar:\n",
+    "    # all which goes here is displayed on the left side of the browser\n",
+    "````\n",
+    "\n",
+    "Another example is the the st.columns widget. Imagine you want to show two graphics or tables next to each other. This would be achieved by\n",
+    "\n",
+    "```python\n",
+    "col1, col2 = st.columns(s)\n",
+    "\n",
+    "with col1:\n",
+    "    st.dataframe(df1)\n",
+    "with col1:\n",
+    "    st.dataframe(df2)\n",
+    "```\n",
+    "\n",
+    "### Input widgets\n",
+    "\n",
+    "Input widgets are very useful for transforming your app into an interactive experience for yourself and other users. Input widgets can be treated like variables themselves. This example\n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "with st.sidebar:\n",
+    "    name = st.text_input(label = \"Please provide your name here:\", value = \"\")\n",
+    "\n",
+    "welcome_string = f\"Welcome {name}, what a lovely name!\"\n",
+    "st.text(welcome_string)\n",
+    "```\n",
+    "\n",
+    "receives the inserted name and stores it under the name variable. Afterwards, this can be used to write a welcoming message to the app which includes the users name. Alternatively, you can give each input widget a characteristic key and retrieve its value under the st.session_state.key_value.\n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "with st.sidebar:\n",
+    "    st.text_input(label = \"Please provide your name here:\", value = \"\", key = \"name\")\n",
+    "\n",
+    "welcome_string = f\"Welcome {st.session_state['name']}, what a lovely name!\"\n",
+    "st.text(welcome_string)\n",
+    "```\n",
+    "There are many different input keys available which can be found in the API's documentation as well. \n",
+    "\n",
+    "### Advanced concepts\n",
+    "\n",
+    "The best way to learn streamlit is to get your hands dirty and create different apps to learn it. Before you can do this, knowing about a few more advanced concepts might be helpful at times. The first one is *caching* which is useful if your app includes downloading data or computational intensive calculations. To use caching you must use the @st.cache_data decorator which can and should be used for all serializable data objects such as str, int, float, DataFrame, dict, list. Caching memorizes if a computation or data download with the same input parameters already has been conducted before. If this is true, previous results are saved in the cache and can be retrieved immediately. For instance, the if the function below is executed twice with the same company_id and starting_date, the data is only downloaded for the first time and taken from the cache the second time.\n",
+    "\n",
+    "```python\n",
+    "def collect_data_for_company(company_id, starting_date):\n",
+    "    # collect and return data for a company with a specific id starting at a specific date\n",
+    "```\n",
+    "\n",
+    "Another caching decorator is the @st.cache_resource decorate which is used for caching global resources such as machine learning models or data base connections. For instance, the transformers package gives us the opportunity to download and use language models for certain purposes. These models are often large and it takes some time to download them. If we just would include code to download and use the model in the script, it would be downloaded every time a user changes a value of an input widget. However, this code\n",
+    "\n",
+    "```python\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "@st.cache_resource  # 👈 Add the caching decorator\n",
+    "def load_model():\n",
+    "    return pipeline(\"sentiment-analysis\")\n",
+    "\n",
+    "model = load_model()\n",
+    "input_text = st.text_input(\"Provide a text for sentiment classification.\", value=\"Python and streamlit are the best!\")\n",
+    "\n",
+    "if input_text:\n",
+    "    result = model(input_text)[0]  \n",
+    "    st.write(result)\n",
+    "```\n",
+    "\n",
+    "only downloads the model once and is able to use it afterwards for an arbitrary number of sentence classification inputs by the user. Only at session start, the model is downloaded once. \n",
+    "\n",
+    "Besides caching, it is useful to know about session states. A session is a single instance when viewing the app. Once a browser page is refreshed, the session state is reset. We have already seen that input widget instances are saved in the session state if a key is provided. The concept can be used in a broader way, e.g., to set states in the background which may be included in the app. For instance the app below makes sure that each time the user presses the button data is sampled with a different and specified random seed. This makes sure the user always creates the same random numbers when pressing the button after she resets the session. \n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "with st.sidebar:\n",
+    "    st.button(\"Press this button to sample new random variables.\", key = \"random_button\")\n",
+    "\n",
+    "if \"seed\" not in st.session_state:\n",
+    "    st.session_state.seed = 1\n",
+    "else:\n",
+    "    st.session_state.seed += 1\n",
+    "\n",
+    "np.random.seed(st.session_state.seed)\n",
+    "st.write(f\"Data are sampled with random seed: {st.session_state.seed}\")\n",
+    "x = np.random.randn(10)\n",
+    "st.write(x)\n",
+    "```\n",
+    "\n",
+    "### Multipage apps\n",
+    "\n",
+    "Streamlit is not restricted to web pages with just one page. Multipage apps can easily be generated by including a pages/ directory next to a entrypoint file (the py script which defines the landing point of your web app). Each py script in the pages/ directory will create an additional page for the app. Page labels and URLs are automatically build from the filenames. \n",
+    "\n",
+    "However, it is recommended to use st.Page and st.navigation if you want more flexibility. For a project, your folder may look like this:\n",
+    "\n",
+    "* my_project\n",
+    "    * main.py\n",
+    "    * page_one.py\n",
+    "    * page_two.py\n",
+    "\n",
+    "The *page_one.py* and *page_two.py* script include content for each page. Within the *main.py* script you can create pages which are based upon these scripts. Next, you can define the navigation for the site with Streamlit's *navigation* method.\n",
+    "\n",
+    "```python\n",
+    "import streamlit as st\n",
+    "\n",
+    "page_one = st.Page(\"page_one.py\", title = \"Page One\")\n",
+    "page_two = st.Page(\"page_two.py\", title = \"Page Two\")\n",
+    "\n",
+    "pg = navigation = st.navigation([page_one, page_two])\n",
+    "pg.run()\n",
+    "```"
    ]
   }
  ],
